--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
-    "querystring": "^0.2.1"
+    "querystring": "^0.2.1",
+    "request": "^2.88.2"
   }
 }
